# LabForge

./: .gitignore  README.md  pyproject.toml
docs/: agent-orchestration-plan-ko.md  environment-requirements-catalog-ko.md  industry-realism-reviewer.md  labforge-review-guide-ko.md  live-agent-adapters.md  open-source-constitution.md  pipeline-workflow.md  realism-profiles.md  reference-tooling-analysis-ko.md  service-artifact-standard.md  service-template-principles.md  workflow-orchestration.md
labforge/: access_playtest.py  adapter_smoke.py  agent_adapters.py  agent_orchestration.py  chain.py  cli.py  control_selection.py  design.py  diagrams.py  doctor.py  e2e_solver.py  execution_plan.py  framework_guard.py  implementation_plan.py  intake.py  io.py  linting.py  model.py  mvp_matrix.py  packaging.py  pipeline.py  playtest.py  plugin_runtime_smoke.py  provider_lifecycle.py  qa.py  realism.py  render.py  schema.py  security_controls.py  service_artifacts.py  service_blueprints.py  service_templates.py  service_verification.py  solver_runner.py  spec_models.py  starter.py  studio.py  templating.py  validate.py  verified_mvp.py  (+4 more)
schemas/: agent-adapter-capability.schema.json  agent-adapter-execution-result.schema.json  agent-adapter-prepare-result.schema.json  agent-adapter-smoke-report.schema.json  agent-decision-log.schema.json  agent-execution-package.schema.json  agent-result.schema.json  agent-review.schema.json  agent-run-plan.schema.json  agent-task.schema.json  artifacts.schema.json  design-fix-apply-report.schema.json  design-fix-package-report.schema.json  (+40 more)
(+82 files in other folders)
