[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "labforge"
version = "0.1.0"
description = "Declarative hands-on security lab generator"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "pydantic>=2.0",
  "Jinja2>=3.1"
]

[project.scripts]
labforge = "labforge.cli:main"

[tool.setuptools.packages.find]
include = ["labforge*"]

[tool.setuptools.package-data]
labforge = ["templates/**/*.j2"]
